# lammpalyzer

./: .gitignore  README.md  analysis.py  execute.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
example_1/: CHONSMgPNaTiClFAu.ff  EC_Li_60_40_lammps_charge.data  lmplyz.inp  log.lammps  species_R3_main.out
example_2/: EC_Li_60_40_nvt_300K_R2.rest  NVT_300K_R1.in  NVT_315K_R2.in  NVT_330K_R3.in  paths.out
examples/example_NVT_vs_NPT/: EC_Li_60_40_nvt_300K_R2.rest  NPT_300K_R2.in  NVT_300K_R1.in  lmplyz.inp  log.lammps  paths.out  species_R1_main.out  species_R2_main.out
examples/example_Temperature/: EC_Li_60_40_nvt_300K_R3.rest  log.lammps  species_R1_main.out  species_R2_main.out  species_R3_main.out
examples/example_thermal_dampening/: EC_Li_60_40_nvt_300K_R1.rest  EC_Li_60_40_nvt_300K_R2.rest  EC_Li_60_40_nvt_300K_R3.rest  NVT_300K_R1_damp10.in  NVT_300K_R2_damp5.in  NVT_300K_R3_damp50.in  lmplyz.inp  paths.out  species_R1_main.out  species_R2_main.out
lammpalyze/: __init__.py  analysis.py  cli.py  config.py  gui.py  info.py  ovito.py  parsers.py  plotting.py  rdf.py  reactions.py  smiles.py  validation.py
lammpalyze/gui/: __init__.py  app.py  canvas.py  helpers.py  molecule_tab.py  rdf_tab.py  reactions_tab.py  species_tab.py  thermo_tab.py
lammpalyze/parsers/: __init__.py  bonds.py  models.py  species.py  thermo.py  trajectory.py
tests/: test_analysis.py  test_cli.py  test_config.py  test_gui.py  test_ovito.py  test_parsers.py  test_plotting.py  test_rdf.py  test_reactions.py  test_smiles.py
